# proto

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  Makefile.in  README.md  ReductionPerf.ncu-rep  TestSetVal  benchmark  benchmark.stream  bitbucket-pipelines.yml  cleanup.sh  cmake.instructions  configure  configure_blis  crusher.make.tips  doxygen.config  generate_docs.py  levelBoxData_profile.nsys-rep  main  out.txt  perf.ncu-rep  pr_test_file  proto_example  proto_make  sdfInterp.cpp  slurp_prtimerrep.py  testSetVal  testSetVal.cpp  validate
examples/: CMakeLists.txt
examples/CPUTests/: CMakeLists.txt
examples/CubedSphereEulerCons_RK4/: CMakeLists.txt
examples/Euler/: CMakeLists.txt
examples/F_Perlman/: README
examples/GeometryConvergence/: CMakeLists.txt
examples/Godunov/: CMakeLists.txt
examples/Multigrid/: CMakeLists.txt
examples/MultigridLevelData/: CMakeLists.txt
examples/Navier/: CMakeLists.txt
examples/PoissonStencil/: CMakeLists.txt
examples/SolidRot/: CMakeLists.txt
examples/_common/: AMRRK4.H  AMRRK4Implem.H  AMRSolver_FASMultigrid.H  AMRSolver_FASMultigridI.H  BoxOp_Euler.H  BoxOp_Laplace.H  BoxOp_Template.H  CMakeLists.txt  InputParser.H  LevelRK4.H  LevelSolver_FASMultigrid.H  LevelSolver_FASMultigridI.H  PolarExchangeCopier.H
examples/applyKernel/: CMakeLists.txt
examples/brickJIT/: CMakeLists.txt  jit.cpp  main.cpp
examples/common/: AMRRK4.H  AMRRK4Implem.H  AMRSolver_FASMultigrid.H  AMRSolver_FASMultigridI.H  AMRSubcycleExplicit.H  AMRSubcycleExplicitImplem.H  BoxOp_Advection.H  BoxOp_Euler.H  BoxOp_Laplace.H  BoxOp_Template.H  CMakeLists.txt  CommonTemplates.H  EulerOp.H  EulerOp.cpp  GodunovAdvectionOp.H  GodunovAdvectionOp.cpp  InputParser.H  InterpStencilTP.H  InterpStencilTPImplem.H  LevelRK4.H  LevelSolver_FASMultigrid.H  LevelSolver_FASMultigridI.H  PolarExchangeCopier.H  RK4.H  SGMultigrid.H  SGMultigrid.cpp  TestFunc.H  proto_memcheck.cpp
examples/commonNew/: AMRSubcycleExplicit.H  AMRSubcycleExplicitImplem.H
examples/forallKernel/: CMakeLists.txt
examples/laplacian/: CMakeLists.txt
examples/leveldata/: CMakeLists.txt  streams.cpp
include/: .#StencilImplem.H  BoxData.H  BoxDataImplem.H  Bx.H  BxImplem.H  CMakeLists.txt  DebugHooks.H  DebugHooksImplem.H  PAssert.H  Point.H  PointImplem.H  Proto.H  ProtoAMR.H  ProtoMMB.H  ProtoOps.H  Proto_AMRData.H  Proto_AMRGrid.H  Proto_AMROp.H  Proto_AMRSolver.H  Proto_Box.H  Proto_BoxData.H  Proto_BoxDataImplem.H  Proto_BoxImplem.H  Proto_BoxOp.H  Proto_Brick.H  Proto_CInterval.H  Proto_Centering.H  Proto_ClockTicks.H  Proto_Config.H.in  Proto_Copier.H  Proto_Cuda.H  Proto_DBLInternals.H  Proto_DataFlow.H  Proto_DataIndex.H  Proto_DebugHooks.H  Proto_DebugHooksImplem.H  Proto_DisjointBoxLayout.H  Proto_DisjointBoxLayoutI.H  Proto_EulerStep.H  Proto_FinitePointSet.H  (+56 more)
include/amr/: CMakeLists.txt  ProtoAMR.H  Proto_AMRData.H  Proto_AMRGrid.H  Proto_AMROp.H  Proto_AMRSolver.H  Proto_BoxOp.H  Proto_CoarseFineBoundary.H  Proto_FinitePointSet.H  Proto_LevelFluxRegister.H  Proto_LevelOp.H  Proto_Register.H  README.md
include/base/: CMakeLists.txt  Proto.H  Proto_Accel.H  Proto_Array.H  Proto_BoundaryCondition.H  Proto_Box.H  Proto_BoxData.H  Proto_BoxLayout.H  Proto_BoxOp.H  Proto_BoxPartition.H  Proto_CInterval.H  Proto_CPU.H  Proto_Centering.H  Proto_CompositeOp.H  Proto_CoordPermutation.H  Proto_Copier.H  Proto_DBLInternals.H  Proto_DataIndex.H  Proto_DataIterator.H  Proto_DebugHooks.H  Proto_DisjointBoxLayout.H  Proto_DistributedSet.H  Proto_Domain.H  Proto_DomainGraph.H  Proto_Forall.H  Proto_GPU.H  Proto_HDF5.H  Proto_InterpStencil.H  Proto_InterpStencil1D.H  Proto_InterpStencilTP.H  Proto_LBDIterator.H  Proto_Lapack.H  Proto_LevelBC.H  Proto_LevelBCLib.H  Proto_LevelBoundaryRegister.H  Proto_LevelBoxData.H  Proto_LevelIterators.H  Proto_LevelOp.H  Proto_LevelSolver.H  Proto_LoHiSide.H  (+28 more)
include/implem/: Proto_AMRDataImplem.H  Proto_AMRGridImplem.H  Proto_AMROpImplem.H  Proto_BoxDataImplem.H  Proto_BoxImplem.H  Proto_BoxOpImplem.H  Proto_CIntervalImplem.H  Proto_CopierImplem.H  Proto_DisjointBoxLayout.H  Proto_DisjointBoxLayoutI.H  Proto_DisjointBoxLayoutImplem.H  Proto_FinitePointSetImplem.H  Proto_ForallImplem.H  Proto_FusedStencil.H  Proto_HDF5Implem.H  Proto_LevelBoxDataImplem.H  Proto_LevelData.H  Proto_LevelDataI.H  Proto_LevelFluxRegisterImplem.H  Proto_LevelIteratorsImplem.H  Proto_LevelOpImplem.H  Proto_MayDayImplem.H  Proto_OperatorI.H  Proto_OperatorImplem.H  Proto_Operators.H  Proto_PointImplem.H  Proto_ProblemDomainImplem.H  Proto_Stack.H  Proto_Stack.H.old  Proto_StencilDefs.H  Proto_StencilImplem.H  Proto_TimerImplem.H  Proto_WriteBoxDataImplem.H  Proto_parstreamImplem.H
include/lapack/: Proto_Matrix.H
include/mmb/: ProtoMMB.H  Proto_BlockBoundary.H  Proto_BlockGraph.H  Proto_BlockGraph.H.old  Proto_BlockIndex.H  Proto_BlockIterator.H  Proto_BlockMap.H  Proto_CoordPermutation.H  Proto_MBAMRBoxPartition.H  Proto_MBAMRData.H  Proto_MBAMRGrid.H  Proto_MBAMRLayout.H  Proto_MBAMRMap.H  Proto_MBBoundaryData.H  Proto_MBBoundaryRegister.H  Proto_MBBoxOp.H  Proto_MBBoxPartition.H  Proto_MBDataIndex.H  Proto_MBDataIterator.H  Proto_MBDataPoint.H  Proto_MBDisjointBoxLayout.H  Proto_MBGraph.H  Proto_MBInterpLayout.H  Proto_MBInterpOp.H  Proto_MBLevelArgs.H  Proto_MBLevelBC.H  Proto_MBLevelBCLib.H  Proto_MBLevelBoundaryData.H  Proto_MBLevelBoxData.H  Proto_MBLevelFluxRegister.H  Proto_MBLevelMap.H  Proto_MBLevelOp.H  Proto_MBMap.H  Proto_MBMapOp.H  Proto_MBOp.H  Proto_MBPointInterpOp.H  Proto_MBProblemDomain.H  Proto_MMBProblemDomain.H  _DEV_NOTES.txt  newInterpOp.H
include/ops/: Proto_Box.H  Proto_CInterval.H  Proto_CoordPermutation.H  Proto_Copier.H  Proto_DataIndex.H  Proto_DisjointBoxLayout.H  Proto_HDF5.H  Proto_Lapack.H  Proto_LevelBC.H  Proto_Matrix.H  Proto_Operator.H  Proto_PowerItoI.H  Proto_Stack.H  Proto_Stencil.H
include/transition/: Proto_Transition_Utilities.H
include/utils/: LevelOp_CubedSphereMHD.H.Design  LevelOp_CubedSphereMHDImplem.H.Design  MBAMRRK4.H  MBAMRRK4.H.Design  MBAMRRK4Implem.H  MBAMRRK4Implem.H.Design  Proto_AMR.H  (+13 more)
(+1358 files in other folders)
