blt_add_executable(NAME repro SOURCES repro.cpp DEPENDS_ON ${LIB_DEP} kokkos Headers_AMR common)
add_subdirectory(_common)
add_subdirectory(LevelMultigrid)
add_subdirectory(LevelEuler)
add_subdirectory(FASMultigrid)
if(AMR)
  add_subdirectory(AMRFAS)
  add_subdirectory(AMRAdvection)
  add_subdirectory(AMREuler)
  add_subdirectory(AMRMeshRefine)
endif()
if (MMB)
  add_subdirectory(MMBLevelRelax)
endif()
