add_subdirectory(_common)
if (OPS)
    add_subdirectory(LevelMultigrid)
    add_subdirectory(LevelEuler)
    add_subdirectory(FASMultigrid)
endif()
add_subdirectory(LevelMultigrid)
add_subdirectory(LevelEuler)
add_subdirectory(FASMultigrid)
if(AMR)
  add_subdirectory(AMRFAS)
  add_subdirectory(AMRAdvection)
  add_subdirectory(AMREuler)
  add_subdirectory(AMRMeshRefine)
endif()
if (MMB)
  add_subdirectory(MMBLevelRelax)
  add_subdirectory(CubedSphereTest)
  #add_subdirectory(RandomSphere)
endif()
