add_subdirectory(_common)
add_subdirectory(LevelMultigrid)
add_subdirectory(LevelEuler)
add_subdirectory(FASMultigrid)
add_subdirectory(MHDReader)
if(AMR)
    add_subdirectory(AMRFAS)
    add_subdirectory(AMRAdvection)
    add_subdirectory(AMREuler)
    add_subdirectory(AMRMeshRefine)
endif()
if (MMB)
    add_subdirectory(MMBLevelRelax)
    add_subdirectory(CubedSphereTest)
    if (DIM GREATER_EQUAL 3)
        #add_subdirectory(CubedSphereEulerFlux)
        #add_subdirectory(CubedSphereEulerCons)
        add_subdirectory(CubedSphereEulerCons_RK4)
    endif()
endif()
